crates/compiler/tests/parse_errors/escape_unknown.elm
module Main exposing (..)

x = "\q"
